--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "version": "0.5.0",
   "description": "ioBroker nuimo Adapter",
   "author": {
-    "name": "@@Author@@",
-    "email": "@@email@@"
+    "name": "Muskelkatermann",
+    "email": "malte.register@me.com"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   },
   "contributors": [
     {
-      "name": "@@Author@@",
-      "email": "@@email@@"
+      "name": "Muskelkatermann",
+      "email": "malte.register@me.com"
     }
   ],
-  "homepage": "https://github.com/ioBroker/ioBroker.nuimo",
+  "homepage": "https://github.com/Muskelkatermann/ioBroker.nuimo",
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "template",
+    "nuimo",
     "Smart Home",
     "home automation"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ioBroker/ioBroker.nuimo"
+    "url": "https://github.com/Muskelkatermann/ioBroker.nuimo"
   },
   "dependencies": {
+    "nuimojs": "^0.2.0"
   },
   "devDependencies": {
       "grunt": "^0.4.5",
       "grunt-replace": "^0.9.3",
       "grunt-contrib-jshint": "^0.11.2",
       "grunt-jscs": "^2.0.0",
-      "grunt-http": "^1.6.0",
-      "grunt-contrib-clean": "^0.6.0",
-      "grunt-contrib-compress": "^0.13.0",
-      "grunt-contrib-copy": "^0.8.0",
-      "grunt-exec": "^0.4.6"
+      "grunt-http": "^1.6.0"
   },
   "bugs": {
-    "url": "https://github.com/ioBroker/ioBroker.template/issues"
+    "url": "https://github.com/Muskelkatermann/ioBroker.nuimo/issues"
   },
   "readmeFilename": "README.md"
 }
